rename project to blog admin

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<header>
-	<a href="/" class="logo">СЯК<span>тексты и книги</span></a>
+	<a href="/" class="logo">Blog Admin<span>Made Easy</span></a>
 	<nav role="main"></nav>
 	<ul class="social">
 	<li><a href=""><img src="/common/images/mail.svg" alt="Email"></a></li>
